--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingHorizontal="@dimen/dp_16"
     android:paddingTop="@dimen/dp_8"
     android:paddingBottom="@dimen/dp_16">
@@ -12,6 +12,6 @@
         android:layout_height="wrap_content"
         android:text="@string/overview"
         android:textColor="@color/black"
-        android:textSize="18sp" />
+        android:textSize="16sp" />
 
 </androidx.core.widget.NestedScrollView>
