--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -81,6 +81,23 @@
             app:layout_constraintTop_toBottomOf="@+id/cardView"
             tools:text="@tools:sample/lorem" />
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvVoteAverage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_4"
+            android:background="@drawable/rounded_corner"
+            android:drawablePadding="@dimen/dp_4"
+            android:gravity="center"
+            android:paddingHorizontal="@dimen/dp_4"
+            android:text="@string/point"
+            android:textColor="@color/yellow"
+            android:textSize="18sp"
+            app:drawableLeftCompat="@drawable/ic_baseline_star_outline_24"
+            app:layout_constraintBottom_toBottomOf="@id/imageBackdrop"
+            app:layout_constraintCircleRadius="@dimen/dp_4"
+            app:layout_constraintEnd_toEndOf="parent" />
+
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardFavorite"
             android:layout_width="wrap_content"
@@ -152,13 +169,13 @@
                 android:background="@color/black" />
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/textGenre"
+                android:id="@+id/textHasAdultContent"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="@color/black"
-                app:drawableLeftCompat="@drawable/ic_baseline_movie_24" />
+                app:drawableLeftCompat="@drawable/ic_baseline_no_adult_content_24" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <com.google.android.material.tabs.TabLayout
@@ -177,5 +194,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tabLayoutDetail" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
