add hide/show bottom navigation bar

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -20,14 +21,6 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="#33000000"
-            app:layout_constraintBottom_toBottomOf="@id/imageBackdrop"
-            app:layout_constraintEnd_toEndOf="@id/imageBackdrop"
-            app:layout_constraintStart_toStartOf="@id/imageBackdrop"
-            app:layout_constraintTop_toTopOf="@id/imageBackdrop" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/buttonBack"
@@ -42,44 +35,44 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="@dimen/dp_32"
-            android:layout_marginBottom="@dimen/dp_minus_64"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="@dimen/dp_16"
-            app:layout_constraintBottom_toBottomOf="@+id/imageBackdrop"
-            app:layout_constraintDimensionRatio="2:3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageBackdrop"
-            app:layout_constraintWidth_percent="0.3">
+        <!--        <androidx.cardview.widget.CardView-->
+        <!--            android:id="@+id/cardView"-->
+        <!--            android:layout_width="0dp"-->
+        <!--            android:layout_height="0dp"-->
+        <!--            android:layout_marginStart="@dimen/dp_32"-->
+        <!--            android:layout_marginBottom="@dimen/dp_minus_64"-->
+        <!--            app:cardBackgroundColor="@color/white"-->
+        <!--            app:cardCornerRadius="@dimen/dp_16"-->
+        <!--            app:layout_constraintBottom_toBottomOf="@+id/imageBackdrop"-->
+        <!--            app:layout_constraintDimensionRatio="2:3"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@+id/imageBackdrop"-->
+        <!--            app:layout_constraintWidth_percent="0.3">-->
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/imageMoviePoster"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:contentDescription="@null"
-                android:scaleType="centerCrop"
-                tools:srcCompat="@tools:sample/avatars" />
-        </androidx.cardview.widget.CardView>
+        <!--            <androidx.appcompat.widget.AppCompatImageView-->
+        <!--                android:id="@+id/imageMoviePoster"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="match_parent"-->
+        <!--                android:adjustViewBounds="true"-->
+        <!--                android:contentDescription="@null"-->
+        <!--                android:scaleType="centerCrop"-->
+        <!--                tools:srcCompat="@tools:sample/avatars" />-->
+        <!--        </androidx.cardview.widget.CardView>-->
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/textMovieName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_16"
-            android:layout_marginTop="@dimen/dp_minus_40"
-            android:layout_marginEnd="@dimen/dp_16"
-            android:textColor="@color/black"
-            android:textSize="@dimen/sp_16"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/cardView"
-            app:layout_constraintTop_toBottomOf="@+id/cardView"
-            tools:text="@tools:sample/lorem" />
+        <!--        <androidx.appcompat.widget.AppCompatTextView-->
+        <!--            android:id="@+id/textMovieName"-->
+        <!--            android:layout_width="0dp"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginStart="@dimen/dp_16"-->
+        <!--            android:layout_marginTop="@dimen/dp_minus_40"-->
+        <!--            android:layout_marginEnd="@dimen/dp_16"-->
+        <!--            android:textColor="@color/black"-->
+        <!--            android:textSize="@dimen/sp_16"-->
+        <!--            android:textStyle="bold"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toEndOf="@+id/imageBackdrop"-->
+        <!--            app:layout_constraintTop_toBottomOf="@+id/imageBackdrop"-->
+        <!--            tools:text="@tools:sample/lorem" />-->
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvVoteAverage"
@@ -120,12 +113,12 @@
                 app:srcCompat="@drawable/ic_baseline_favorite_border_24" />
         </com.google.android.material.card.MaterialCardView>
 
-        <androidx.constraintlayout.widget.Barrier
-            android:id="@+id/barrierPosterAndName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:barrierDirection="bottom"
-            app:constraint_referenced_ids="cardView,textMovieName" />
+        <!--        <androidx.constraintlayout.widget.Barrier-->
+        <!--            android:id="@+id/barrierPosterAndName"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            app:barrierDirection="bottom"-->
+        <!--            app:constraint_referenced_ids="textMovieName" />-->
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/layoutInformation"
@@ -138,7 +131,7 @@
             android:weightSum="3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/barrierPosterAndName">
+            app:layout_constraintTop_toBottomOf="@+id/imageBackdrop">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/textDateRelease"
@@ -178,22 +171,28 @@
                 app:drawableLeftCompat="@drawable/ic_baseline_no_adult_content_24" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabLayoutDetail"
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_16"
-            android:paddingTop="@dimen/dp_16"
-            app:layout_constraintTop_toBottomOf="@+id/layoutInformation">
-        </com.google.android.material.tabs.TabLayout>
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPagerDetail"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tabLayoutDetail" />
+            app:layout_constraintTop_toBottomOf="@+id/layoutInformation">
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabLayoutDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp_16"
+                android:paddingTop="@dimen/dp_16"
+                app:tabMode="auto" />
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPagerDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.core.widget.NestedScrollView>
+</androidx.appcompat.widget.LinearLayoutCompat>
