--- a/app/src/main/res/layout/fragment_similar.xml
+++ b/app/src/main/res/layout/fragment_similar.xml
@@ -4,13 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".presentation.ui.detail.SimilarFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerSimilarMovie"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
