--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -15,4 +15,10 @@
         android:enabled="true"
         android:icon="@drawable/ic_baseline_movie_filter_24"
         android:title="@string/favorite" />
+
+    <item
+        android:id="@+id/favoriteSearch"
+        android:enabled="true"
+        android:icon="@drawable/baseline_search_24"
+        android:title="@string/search" />
 </menu>
